<resources>
    <string name="app_name">My Application</string>
    <string name="mainmsgbillamout">Bill amount</string>
    <string name="mainhintbillamount">Enter Bill Amount Here</string>
    <string name="mainmsgservicerating">Service Rating</string>
    <string name="mainmsgtippercent">%s%% Tip Percent</string>
    <string name="mainmsgtiptotal">$%s Tip Total</string>
    <string name="mainmsgbilltotal">Bill Total</string>
    <string name="mainmsgbilltotalresult">$%s</string>
    <string name="regular_service_tip_button">Regular Service Tip Button</string>
    <string name="good_service_tip_button">Good Service Tip Button</string>
    <string name="excellent_service_tip_button">Excellent Service Tip Button</string>
</resources>
